--- a/static/login.htm
+++ b/static/login.htm
@@ -10,10 +10,21 @@
 </head>
 <body>
     <div id="login-app">
-        <h1> {{ message }} </h1>
-        Username: <input v-model="username" type="text"/>
-        Password: <input v-model="password" type="password"/>
-        <input v-on:click="postLogin" value="Login" type="submit"/>
+        <div class="container">
+            <h1>Login</h1>
+            <form @submit.prevent="postLogin">
+                <div class="row col-sm-4">
+                    Username: <input v-model="username" type="text"/>
+                </div>
+                <div class="row col-sm-4">
+                    Password: <input v-model="password" type="password"/>
+                </div>
+                <div class="row col-sm-4" >
+                    <input value="Login" type="submit"/>
+                </div>
+            </form>
+            <div class="alert row col-sm-4" v-bind:class="messageClass" v-html="message"></div>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
