--- a/static/login.htm
+++ b/static/login.htm
@@ -7,26 +7,41 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+     <link href="/static/style.css" rel="stylesheet">
 </head>
 <body>
     <div id="login-app">
         <div class="container">
-            <h1>Login</h1>
-            <form @submit.prevent="postLogin">
-                <div class="row col-sm-4">
-                    Username: <input v-model="username" type="text"/>
-                </div>
-                <div class="row col-sm-4">
-                    Password: <input v-model="password" type="password"/>
-                </div>
-                <div class="row col-sm-4" >
-                    <input value="Login" type="submit"/>
-                </div>
+            <h1>&lt;Login&gt;</h1>
+            <form @submit.prevent="postLogin" id="loginform">
+                <fieldset v-bind:disabled="isSuccess">
+                    <div class="row justify-content-evenly">
+                        <div class="col-sm-4">
+                            <div class="row">Username:</div>
+                            <div class="row"><input v-model="username" type="text" autocomplete="username"/></div>
+                        </div>
+                    </div>
+                    <div class="row justify-content-evenly">
+                        <div class="col-sm-4">
+                            <div class="row">Password:</div>
+                            <div class="row"><input v-model="password" type="password" autocomplete="current-password"/>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row justify-content-evenly">
+                        <div class="col-sm-4">
+                            <div class="row"><input value="Login" type="submit"/></div>
+                        </div>
+                    </div>
+                    <div class="row justify-content-evenly">
+                        <div class="col-sm-4">
+                            <div class="alert" v-bind:class="messageClass" v-html="message"></div>
+                        </div>
+                    </div>
+                </fieldset>
             </form>
-            <div class="alert row col-sm-4" v-bind:class="messageClass" v-html="message"></div>
         </div>
     </div>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="/scripts/login.js"></script>
