--- a/static/restricted.htm
+++ b/static/restricted.htm
@@ -3,25 +3,30 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Front Page</title>
+    <title>Login</title>
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
      <link href="/static/style.css" rel="stylesheet">
 </head>
 <body>
-    <div id="front-page-app">
+    <div id="restricted-app">
         <div class="container">
-            <h1>&lt;Front Page&gt;</h1>
-            <div class="row justify-content-evenly">
+            <h1>&lt;Restricted&gt;</h1>
+            <div v-if="logged_in" class="row justify-content-evenly">
                 <div class="col-sm-4">
-                    <div class="alert alert-warning">Please, log in <a href="/login">HERE</a>.</div>
+                    <current-user-info v-bind:user="user"></current-user-info>
+                </div>
+            </div>
+            <div v-else class="row justify-content-evenly">
+                 <div class="col-sm-4">
+                    <div class="alert alert-danger">Access denied. Please, log in <a href="/login">HERE</a>.</div>
                 </div>
             </div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="/scripts/frontpage.js"></script>
+    <script src="/scripts/restricted.js"></script>
 </body>
 </html>
