--- a/static/adminpage.htm
+++ b/static/adminpage.htm
@@ -3,24 +3,24 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Restricted</title>
+    <title>Admin Page</title>
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
      <link href="/static/style.css" rel="stylesheet">
 </head>
 <body>
-    <div id="restricted-app">
+    <div id="admin-app">
         <div class="container">
-            <h1>&lt;Restricted&gt;</h1>
-            <div v-if="logged_in" class="row justify-content-evenly">
+            <h1>&lt;Admin Page&gt;</h1>
+            <div v-if="logged_in_as_admin" class="row justify-content-evenly">
                 <div class="col-sm-4">
                     <current-user-info v-bind:user="user"></current-user-info>
                 </div>
             </div>
             <div v-else class="row justify-content-evenly">
                  <div class="col-sm-4">
-                    <div class="alert alert-danger">Access denied. Please, log in <a href="/login">HERE</a>.</div>
+                    <div class="alert alert-danger">Access denied. You are not an admin. Please, log in <a href="/login">HERE</a>.</div>
                 </div>
             </div>
         </div>
@@ -28,6 +28,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="/scripts/common-components.js"></script>
-    <script src="/scripts/restricted.js"></script>
+    <script src="/scripts/adminpage.js"></script>
 </body>
 </html>
