--- a/static/login.htm
+++ b/static/login.htm
@@ -39,11 +39,19 @@
                     </div>
                 </fieldset>
             </form>
+
+            <p>
+                <router-link to="/login-form">Login</router-link>
+                <router-link to="/registration-form">Register</router-link>
+            </p>
+            <router-view></router-view>
+
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+    <script src="https://unpkg.com/vue@3"></script>
+    <script src="https://unpkg.com/vue-router@4"></script>
     <script src="/scripts/login.js"></script>
 </body>
 </html>
