--- a/static/frontpage.htm
+++ b/static/frontpage.htm
@@ -14,7 +14,7 @@
             <h1>&lt;Front Page&gt;</h1>
             <div class="row justify-content-evenly">
                 <div class="col-sm-4">
-                    <div class="alert alert-warning">Please, log in <a href="/login">HERE</a>.</div>
+                    <div class="alert alert-warning">Please, <a href="/login">log in</a>.</div>
                 </div>
             </div>
         </div>
