--- a/static/login.htm
+++ b/static/login.htm
@@ -11,47 +11,13 @@
 <body>
     <div id="login-app">
         <div class="container">
-            <h1>&lt;Login&gt;</h1>
-            <form @submit.prevent="postLogin" id="loginform">
-                <fieldset v-bind:disabled="isSuccess">
-                    <div class="row justify-content-evenly">
-                        <div class="col-sm-4">
-                            <div class="row">Username:</div>
-                            <div class="row"><input v-model="username" type="text" autocomplete="username"/></div>
-                        </div>
-                    </div>
-                    <div class="row justify-content-evenly">
-                        <div class="col-sm-4">
-                            <div class="row">Password:</div>
-                            <div class="row"><input v-model="password" type="password" autocomplete="current-password"/>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row justify-content-evenly">
-                        <div class="col-sm-4">
-                            <div class="row"><input value="Login" type="submit"/></div>
-                        </div>
-                    </div>
-                    <div class="row justify-content-evenly">
-                        <div class="col-sm-4">
-                            <div class="alert" v-bind:class="messageClass" v-html="message"></div>
-                        </div>
-                    </div>
-                </fieldset>
-            </form>
-
-            <p>
-                <router-link to="/login-form">Login</router-link>
-                <router-link to="/registration-form">Register</router-link>
-            </p>
             <router-view></router-view>
-
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://unpkg.com/vue@3"></script>
     <script src="https://unpkg.com/vue-router@4"></script>
-    <script src="/scripts/login.js"></script>
+    <script type="module" src="/scripts/login.js"></script>
 </body>
 </html>
