--- a/static/adminpage.htm
+++ b/static/adminpage.htm
@@ -19,7 +19,7 @@
             </div>
             <div v-else class="row justify-content-evenly">
                  <div class="col-sm-4">
-                    <div class="alert alert-danger">Access denied. You are not an admin. Please, log in <a href="/login">HERE</a>.</div>
+                    <div class="alert alert-danger">Access denied. You are not an administrator. Please, <a href="/login">log in</a>.</div>
                 </div>
             </div>
         </div>
