--- a/static/frontpage.htm
+++ b/static/frontpage.htm
@@ -17,11 +17,12 @@
                     <div class="alert alert-warning">Please, <a href="/login">log in</a>.</div>
                 </div>
             </div>
+            <thing-list></thing-list>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://unpkg.com/vue@3"></script>
-    <script src="/scripts/frontpage.js"></script>
+    <script type="module" src="/scripts/frontpage.js"></script>
 </body>
 </html>
